<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carleton on Wind Power</string>
    <string name="title_wind">Live</string>
    <string name="title_data">Historic</string>
    <string name="title_info">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_sync">Sync</string>
    <string name="windspeed_label">Windspeed</string>
    <string name="temperature_label">Temperature</string>
    <string name="percent_wind_label">Wind Power</string>
    <string name="consumption_label">Campus Demand</string>
    <string name="production_label">Windmill Production</string>
    <string name="last_updated_label">LAST UPDATED </string>
    <string name="rotation_label">\nrotate screen to see graph</string>
    <string name="dataFrag_instructions">\n\nHistorical data can be viewed in a graph.\nUse the buttons below to select the data you would like to view.\n</string>
    <string name="radioButtonLabel">Time frame:</string>
    <string name="checkBoxLabel">View data about:</string>
    <string name="unit_mph">mph</string>
    <string name="kWH_consumption">kW</string>
    <string name="kWh_production">kW</string>
    <string name="FontColor">Select Color</string>
    <string name="year_setting">Year</string>
    <string name="day_setting">Day</string>
    <string name="week_setting">Week</string>
    <string name="month_setting">Month</string>
    <string name="current_energy">Current Energy</string>
    <string name="info_about_us">About Us</string>
    <string name="notification_toggle">ENABLE NOTIFICATIONS</string>
    <string name="Licensing">\t

    Copyright (C) 2014 Katja Collier, Nathan Fudenberg, Carolyn Harris, Richard Lin, Michael Wheatman. \n \n\tPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n \n\tThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n \n\tTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n \n \n\tCopyright 2013 AndroidPlot.com Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. \n \n\tImage Rights: Windmill Line Art: http://sweetclipart.com/wind-turbine-line-art-1190 under Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported. \n \n\tLoading Screen Windmill: http://pixabay.com/en/windmill-blue-sky-cloud-sunny-days-181284/ under CC0 1.0 Universal (CC0 1.0) Public Domain Dedication." </string>
    <string name="RefreshButton">Refreshing</string>
    <string name="label_graphable">Graph</string>
    <string name="label_time_scale">Time Scale</string>
    <string name="rotation_description">Generate:</string>
</resources>
