<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zephyrus.testapp.carletonenergyapp.app.EnergyFragment"
    android:background="#FF40567A">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="4">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/consumption_label"
                android:id="@id/consumption_label"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:textSize="20sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="1220"
                    android:id="@id/consumption_display"
                    android:layout_below="@id/consumption_label"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/kWH_consumption"
                    android:id="@id/kWH_consumption"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="35sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/production_label"
                android:id="@id/production_label"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textSize="20sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="987"
                    android:id="@id/production_display"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/kWh_production"
                    android:id="@id/kWh_production"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:textSize="35sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_weight="1.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="80%"
                android:id="@id/percent_wind_display"
                android:layout_weight="0.5"
                android:gravity="right"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/percent_wind_label"
                android:id="@id/percent_wind_label"
                android:layout_weight="0.5"
                android:layout_marginLeft="10dp"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0.7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/last_updated_label"
                android:id="@id/last_updated_label"
                android:textStyle="bold"
                android:gravity="right"
                android:layout_marginLeft="30dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="12:14pm 4/26/2014"
                android:id="@id/last_updated_display"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>